--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -2,8 +2,8 @@
 {% capture currentyear %}{{ 'now' | date: "%Y" }}{% endcapture %}
 	<span>© {{ currentyear }}</span> 
 	<span>
-		<a href="{{ site.url }}/">Informatika UMMU</a> | 
-		<a href="https://github.com/infoummu/TAJ" target="_blank">github</a>
+		<a href="{{ site.url }}/MAJ">Informatika UMMU</a> | 
+		<a href="https://github.com/infoummu/MAJ" target="_blank">github</a>
 	</span> 
 </footer>
 
