--- a/_includes/header.html
+++ b/_includes/header.html
@@ -10,7 +10,7 @@
     </span>
 -->
     <span class="f-left">  
-      <a href="{{ site.url }}/MAJ"> <!-- |site.baseurl : {{site.baseurl}} | site.url : {{ site.url }} -->
+      <a href="{{ site.url }}/MAJ/"> <!-- |site.baseurl : {{site.baseurl}} | site.url : {{ site.url }} -->
         <h1>
           Informatika UMMU
         </h1>
